# Xtask

./: Cargo.toml  LICENSE  README.md  Xtask.md  build.rs
hal2/cm32m4xxr-hal/: Cargo.toml
hal2/cm32m4xxr-hal/src/: eclic.rs  lib.rs
hal2/cm32m4xxr-pac/: CM32M4xxR.svd  Cargo.toml  device.x
hal2/cm32m4xxr-pac/.cargo/: config.toml
hal2/cm32m4xxr-pac/src/: adc3.rs  afio.rs  bkp.rs  can1.rs  comp.rs  crc.rs  dac.rs  dbg.rs  dma1.rs  eclic.rs  exti.rs  flash.rs  generic.rs  gpioa.rs  i2c3.rs  interrupt.rs  iwdg.rs  lib.rs  opamp.rs  pwr.rs  qspi.rs  rcc.rs  rngc.rs  rtc.rs  spi3.rs  tim1.rs  tsc.rs  usart1.rs  wwdg.rs
hal2/cm32m4xxr-pac/src/adc1/: adc_ctrl1.rs  adc_ctrl3.rs  adc_difsel.rs  adc_iptst.rs  adc_jdat1.rs  adc_smpr1.rs  adc_wdghigh.rs
hal2/cm32m4xxr-pac/src/adc2/: adc_joffset1.rs  adc_sts.rs  adc_wdglow.rs
hal2/cm32m4xxr-pac/src/adc3/: adc_joffset2.rs  adc_joffset3.rs  adc_joffset4.rs  adc_sampt3.rs
hal2/cm32m4xxr-pac/src/adc4/: adc_calfact.rs  adc_ctrl2.rs  adc_jdat.rs  adc_jdat2.rs  adc_jdat3.rs  adc_jdat4.rs  adc_jseq.rs  adc_rseq1.rs  adc_rseq2.rs  adc_rseq3.rs  adc_smpr2.rs
hal2/cm32m4xxr-pac/src/afio/: afio_ectrl.rs  afio_exti_cfg1.rs  afio_exti_cfg2.rs  afio_exti_cfg3.rs  afio_exti_cfg4.rs  afio_rmp_cfg.rs  afio_rmp_cfg3.rs  afio_rmp_cfg4.rs  afio_rmp_cfg5.rs
hal2/cm32m4xxr-pac/src/bkp/: bkp_csts.rs  bkp_ctrl.rs  bkp_dat1.rs  bkp_dat10.rs  bkp_dat11.rs  bkp_dat12.rs  bkp_dat13.rs  bkp_dat14.rs  bkp_dat15.rs  bkp_dat16.rs  bkp_dat17.rs  bkp_dat18.rs  bkp_dat19.rs  bkp_dat2.rs  bkp_dat20.rs  bkp_dat21.rs  bkp_dat22.rs  bkp_dat23.rs  bkp_dat24.rs  bkp_dat25.rs  bkp_dat26.rs  bkp_dat27.rs  bkp_dat28.rs  bkp_dat29.rs  bkp_dat3.rs  bkp_dat30.rs  bkp_dat31.rs  bkp_dat32.rs  bkp_dat33.rs  bkp_dat34.rs  bkp_dat35.rs  bkp_dat36.rs  bkp_dat37.rs  bkp_dat38.rs  bkp_dat39.rs  bkp_dat4.rs  bkp_dat40.rs  bkp_dat41.rs  bkp_dat42.rs  bkp_dat5.rs  (+4 more)
hal2/cm32m4xxr-pac/src/can1/: can_btim.rs  can_ests.rs  can_f0b1.rs  can_f0b2.rs  can_f13b1.rs  can_f13b2.rs  can_f1b1.rs  can_f1b2.rs  can_fa1.rs  can_ffa1.rs  can_fm1.rs  can_fmc.rs  can_fs1.rs  can_inte.rs  can_mctrl.rs  can_msts.rs  can_rff0.rs  can_rff1.rs  can_rmdh0.rs  can_rmdh1.rs  can_rmdl0.rs  can_rmdl1.rs  can_rmdt0.rs  can_rmdt1.rs  can_rmi0.rs  can_rmi1.rs  can_tmdh0.rs  can_tmdh1.rs  can_tmdh2.rs  can_tmdl0.rs  can_tmdl1.rs  can_tmdl2.rs  can_tmdt0.rs  can_tmdt1.rs  can_tmdt2.rs  can_tmi0.rs  can_tmi1.rs  can_tmi2.rs  can_tsts.rs
hal2/cm32m4xxr-pac/src/comp/: comp1_ctrl.rs  comp1_filc.rs  comp1_filp.rs  comp2_ctrl.rs  comp2_filc.rs  comp2_filp.rs  comp3_ctrl.rs  comp3_filc.rs  comp3_filp.rs  comp4_ctrl.rs  comp4_filc.rs  comp4_filp.rs  comp5_ctrl.rs  comp5_filc.rs  comp5_filp.rs  comp6_ctrl.rs  comp6_filc.rs  comp6_filp.rs  comp7_ctrl.rs  comp7_filc.rs  comp7_filp.rs  comp_inten.rs  comp_intsts.rs  comp_lock.rs  comp_vrefscl.rs  comp_winmode.rs
hal2/cm32m4xxr-pac/src/crc/: crc16ctrl.rs  crc16d.rs  crc16dat.rs  crc32ctrl.rs  crc32dat.rs  crc32idat.rs  lrc.rs
hal2/cm32m4xxr-pac/src/dac/: dac_ctrl.rs  dac_dato1.rs  dac_dato2.rs  dac_dl12ch1.rs  dac_dl12ch2.rs  dac_dl12dch.rs  dac_dr12ch1.rs  dac_dr12ch2.rs  dac_dr12dch.rs  dac_dr8ch1.rs  dac_dr8ch2.rs  dac_dr8dch.rs  dac_sottr.rs
hal2/cm32m4xxr-pac/src/dbg/: dbg_ctrl.rs  dbg_id.rs
hal2/cm32m4xxr-pac/src/dma1/: dma_chcfg5.rs  dma_chcfg6.rs  dma_chcfg7.rs  dma_chcfg8.rs  dma_chmapen.rs  dma_chsel1.rs  dma_chsel3.rs  dma_chsel4.rs  dma_chsel5.rs  dma_chsel8.rs  dma_intclr.rs  dma_maddr1.rs  dma_maddr2.rs  dma_maddr3.rs  dma_maddr6.rs  dma_maddr8.rs  dma_paddr1.rs  dma_paddr7.rs  dma_txnum1.rs  dma_txnum2.rs  dma_txnum3.rs  dma_txnum6.rs
hal2/cm32m4xxr-pac/src/dma2/: dma_chcfg1.rs  dma_chcfg2.rs  dma_chcfg3.rs  dma_chcfg4.rs  dma_chsel2.rs  dma_chsel6.rs  dma_chsel7.rs  dma_intsts.rs  dma_maddr4.rs  dma_maddr5.rs  dma_maddr7.rs  dma_paddr2.rs  dma_paddr3.rs  dma_paddr4.rs  dma_paddr5.rs  dma_paddr6.rs  dma_paddr8.rs  dma_txnum4.rs  dma_txnum5.rs  dma_txnum7.rs  dma_txnum8.rs
hal2/cm32m4xxr-pac/src/eclic/: cliccfg.rs  clicinfo.rs  clicint1.rs  clicint10.rs  clicint100.rs  clicint101.rs  clicint102.rs  clicint103.rs  clicint104.rs  clicint11.rs  clicint12.rs  clicint13.rs  clicint14.rs  clicint15.rs  clicint16.rs  clicint17.rs  clicint18.rs  clicint19.rs  clicint2.rs  clicint20.rs  clicint21.rs  clicint22.rs  clicint23.rs  clicint24.rs  clicint25.rs  clicint26.rs  clicint27.rs  clicint28.rs  clicint29.rs  clicint3.rs  clicint30.rs  clicint31.rs  clicint32.rs  clicint33.rs  clicint34.rs  clicint35.rs  clicint36.rs  clicint37.rs  clicint38.rs  clicint39.rs  (+67 more)
hal2/cm32m4xxr-pac/src/exti/: exti_emask.rs  exti_ft_cfg.rs  exti_imask.rs  exti_pend.rs  exti_rt_cfg.rs  exti_swie.rs  exti_ts_sel.rs
hal2/cm32m4xxr-pac/src/flash/: flash_ac.rs  flash_add.rs  flash_cahr.rs  flash_ctrl.rs  flash_eccr.rs  flash_key.rs  flash_ob.rs  flash_optkey.rs  flash_rdn.rs  flash_sts.rs  flash_wrp.rs
hal2/cm32m4xxr-pac/src/gpioa/: gpiox_ds_cfg.rs  gpiox_pbc.rs  gpiox_pbsc.rs  gpiox_ph_cfg.rs  gpiox_pid.rs  gpiox_pl_cfg.rs  gpiox_plock_cfg.rs  gpiox_pod.rs  gpiox_sr_cfg.rs
hal2/cm32m4xxr-pac/src/i2c1/: i2c_sts1.rs  i2c_tmrise.rs
hal2/cm32m4xxr-pac/src/i2c2/: i2c_clkctrl.rs  i2c_ctrl2.rs  i2c_dat.rs  i2c_oaddr2.rs  i2c_sts2.rs
hal2/gd32vf103-pac/: Cargo.toml  GD32VF103.svd  README.md  librs-patch  update.sh
hal2/gd32vf103-pac/patches/: gd32vf103.yaml
hal2/gd32vf103-pac/src/: adc0.rs  adc1.rs  afio.rs  bkp.rs  can0.rs  crc.rs  ctimer.rs  dac.rs  dbg.rs  dma0.rs  dma1.rs  eclic.rs  exmc.rs  exti.rs  fmc.rs  fwdgt.rs  gpioa.rs  i2c0.rs  interrupt.rs  lib.rs  pmu.rs  rcu.rs  rtc.rs  spi0.rs  timer0.rs  timer1.rs  timer5.rs  usart0.rs  usbfs_device.rs  usbfs_global.rs  usbfs_host.rs  usbfs_pwrclk.rs  wwdgt.rs
hal2/gd32vf103xx-hal/: CHANGELOG.md  Cargo.toml  README.md  assemble.sh  build.rs  eclic-mode-hack-xtask.S  eclic-mode-hack.S
hal2/gd32vf103xx-hal/src/: adc.rs  afio.rs  backup_domain.rs  delay.rs  dma.rs  eclic.rs  exmc.rs  exti.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  pwm.rs  rcu.rs  rtc.rs  serial.rs  signature.rs  spi.rs  time.rs  timer.rs  watchdog.rs
(+725 files in other folders)
