[package]
authors = ["高庆丰 <gao.qingfeng@gmail.com>"]
categories = ["embedded", "rtos", "no-std"]
description = "嵌入式多任务调度系统"
edition = "2021"
keywords = ["arm", "riscv", "riscv64", "cortex-m", "cortex-r", "cortex-a", "gd32", "stm32", "ch32", "esp"]
license = "MIT"
name = "xtask"
repository = "https://github.com/gqf2008/xtask"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# 默认特征
default = ["chip", "bsp", "xtask_executor", "xtask_scheduler"]
# 默认单硬件线程执行器
xtask_executor = []
# 打印任务清单任务
debug_task = []
# 软件定时器
timer = []
# 默认调度器
xtask_scheduler = []
# 芯片 
chip = ["stm32f1"]
# gd32vf103
gd32vf103 = ["gd32vf103xx-hal"]
# stm32f1xx
stm32f1 = ["stm32f1xx-hal"]
# stm32f4xx
stm32f4 = ["stm32f4xx-hal"]
# 板级支持包
bsp = ["bluepill"]
# longan_nano
longan_nano = ["st7735-lcd", "mpu6050"]
# greenpill stm32f401ccu6
bluepill = []
greenpill = []

[dependencies]
bare-metal = "1.0.0"
bit_field = "0.10.1"
crossbeam = {version = "0.8.1", default-features = false, features = ["alloc"]}
embedded-hal = "0.2.3"
heapless = "0.7"
lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"]}
linked_list_allocator = "0.9.0"
nb = "1.0.0"
profont = "0.4.0"
spin = "0.9.3"

# mpu6050 = "0.1.4"
# nalgebra = {version = "0.28.0", default-features = false, features = ["alloc", "macros", "rand-no-std", "libm"]}
# optimath = "0.3.1"
mpu6050 = {version = "0.1.4", optional = true}
st7735-lcd = {version = "0.8", optional = true}

[dependencies.gd32vf103xx-hal]
optional = true
path = "hal2/gd32vf103xx-hal"

[dependencies.stm32f4xx-hal]
features = ["rt", "stm32f401"]
optional = true
version = "0.13.2"

[dependencies.stm32f1xx-hal]
features = ["rt", "stm32f103"]
optional = true
version = "0.9.0"

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7.2.0"

[target.'cfg(all(any(target_arch = "riscv32",target_arch = "riscv64")))'.dependencies]
riscv = "0.8.0"
riscv-rt = "0.8.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.9"

[dev-dependencies]
panic-halt = "0.2.0"

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
