[package]
authors = ["高庆丰 <gao.qingfeng@gmail.com>"]
categories = ["embedded", "rtos", "no-std"]
description = "嵌入式多任务调度系统"
edition = "2021"
keywords = ["arm", "riscv", "riscv64", "cortex-m", "cortex-r", "cortex-a", "gd32", "stm32", "ch32", "esp"]
license = "MIT"
name = "xtask"
repository = "https://github.com/gqf2008/xtask"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# 默认特征
default = ["xtask_executor", "xtask_scheduler", "rtt_log"]
# 默认单硬件线程执行器
xtask_executor = []
# 打印任务清单任务
debug_task = []
# 软件定时器
timer = []
# 默认调度器
xtask_scheduler = []
# 芯片，可选项gd32vf103、stm32f1、stm32f4、rp2040
# rp2040
rp2040 = ["rp2040-hal", "rp2040-boot2", "rp-pico"]
# gd32vf103
gd32vf103 = ["gd32vf103xx-hal", "longan_nano"]
# stm32f1xx
stm32f1 = ["stm32f1xx-hal", "bluepill"]
# stm32f4xx
stm32f4 = ["stm32f4xx-hal", "greenpill"]
stm32h7 = ["stm32h7xx-hal"]
# 板级支持包
# longan_nano
longan_nano = ["st7735-lcd", "mpu6050"]
# bluepill stm32f103
bluepill = []
# greenpill stm32f401ccu6
greenpill = []
# rp-pico
rp-pico = []
# rtt_log
rtt_log = []
#stdout_log
stdout_log = []
#fatfs
fs=["fatfs"]
#net
net=["smoltcp"]

[dependencies]
bare-metal = "1.0.0"
bit_field = "0.10.1"
crossbeam = {version = "0.8.1", default-features = false, features = ["alloc"]}
embedded-hal = "0.2.3"
heapless = "0.7"
# lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"]}
linked_list_allocator = {version = "0.9.0", default-features = false, features = ["const_mut_refs"]}
nb = "1.0.0"
profont = "0.4.0"
# spin = "0.9.3"
cast = {version = "0.3.0", default-features = false}
log = "0.4.17"
panic-probe = {version = "0.3", features = ["print-rtt"]}
cty = "0.2.2"

# optional
fatfs = { git = "https://github.com/rafalh/rust-fatfs",optional = true,  features = ["unicode","alloc","lfn"], default-features = false }
gd32vf103xx-hal = {path = "hal2/gd32vf103xx-hal", optional = true}
mpu6050 = {version = "0.1.4", optional = true}
rp2040-boot2 = {version = "0.2.0", optional = true}
rp2040-hal = {version = "0.4.0", optional = true}
st7735-lcd = {version = "0.8", optional = true}
stm32f1xx-hal = {version = "0.9.0", optional = true, features = ["rt", "stm32f103"]}
stm32f4xx-hal = {version = "0.13.2", optional = true, features = ["rt", "stm32f427"]}
stm32h7xx-hal = {version = "0.12.2", optional = true, features = ["rt", "stm32h7b0","log-rtt"]}
smoltcp = { version = "0.8.0", optional = true, default-features = false, features = ["alloc","proto-ipv4","socket-raw","socket-udp","socket-tcp","socket-icmp","socket-dhcpv4"] }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7.2.0"

[target.'cfg(all(any(target_arch = "riscv32",target_arch = "riscv64")))'.dependencies]
riscv = "0.8.0"
riscv-rt = "0.8.1"
rtt-target = {version = "0.3.1", features = ["riscv"]}


[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.9"

[dev-dependencies]
panic-halt = "0.2.0"

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = true
lto = true
# strip = true
opt-level = "z"
