[package]
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for GD32VF103 chips"
edition = "2018"
keywords = ["riscv", "gd32", "register", "peripheral"]
license = "ISC"
name = "gd32vf103-pac"
repository = "https://github.com/riscv-rust/gd32vf103-pac"
version = "0.4.0"

[dependencies]
riscv = "0.8.0"
vcell = "0.1.2"

[features]
rt = []
